--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
       <ul>
         <li>Project 1: Description of the project</li>
         <li>Project 2: Description of the project</li>
+        <li>Project 1: Description of the project</li>
+        <li>Project 2: Description of the project</li>
+        <li>Project 1: Description of the project</li>
+        <li>Project 2: Description of the project</li>
+        <li>Project 1: Description of the project</li>
+        <li>Project 2: Description of the project</li>
       </ul>
     </section>
     <footer>
-      <p>Contact me at: <a href="dylankarch10@gmail.com"></a></p>
+      <p>Contact me at:"dylankarch10@gmail.com"></a></p>
     </footer>
   </body>
 </html>
