--- a/index.html
+++ b/index.html
@@ -3,31 +3,33 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dylan karch's Portfolio</title>
+    <title>Your Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <!-- Header Section -->
     <header>
-      <h1>Welcome to My Portfolio</h1>
+      <h1>Welcome to My Portfolio!</h1>
+      <p>Hi, I'm [Your Name], and I love exploring technology and creativity!</p>
     </header>
-    <section>
-      <h2>About Me</h2>
-      <p>Hi! I'm a 14-year-old student in Sec 3, and I've been learning web development over the years.</p>
-    </section>
-    <section>
-      <h2>Projects</h2>
+
+    <!-- Introduction Section -->
+    <section class="intro">
+      <h2>What I Do</h2>
+      <p>I specialize in a variety of creative and technical skills:</p>
       <ul>
-        <li>Project 1: Description of the project</li>
-        <li>Project 2: Description of the project</li>
-        <li>Project 1: Description of the project</li>
-        <li>Project 2: Description of the project</li>
-        <li>Project 1: Description of the project</li>
-        <li>Project 2: Description of the project</li>
-        <li>Project 1: Description of the project</li>
-        <li>Project 2: Description of the project</li>
+        <li><strong>3D Printing</strong> - Creating custom designs and prototypes</li>
+        <li><strong>Blender</strong> - Modeling and animating in 3D</li>
+        <li><strong>Photoshop</strong> - Editing and designing images</li>
+        <li><strong>Illustrator</strong> - Creating vector-based designs</li>
+        <li><strong>Adobe Software</strong> - Using tools like Premiere Pro, After Effects, etc.</li>
+        <li><strong>Greenfoot</strong> - Developing games with Java</li>
       </ul>
     </section>
+
+    <!-- Footer Section -->
     <footer>
-      <p>Contact me at:"dylankarch10@gmail.com"></a></p>
+      <p>Feel free to explore more of my work below!</p>
     </footer>
   </body>
 </html>
